--- a/client/src/styles/blog.css
+++ b/client/src/styles/blog.css
@@ -26,7 +26,7 @@
 
 /* Header section */
 .blog-header {
-  margin-top: 4vh;
+  margin : 4vh; 
   text-align: center;
 }
 
